# openscad-customizer-rs

./: Cargo.toml  LICENSE.txt  ReadMe.md
data/: format.json
examples/: example.json  format.json
src/: customizer.rs  lib.rs  main.rs  mod.rs
src/test/: change_map.rs  mod.rs  se_deserialize.rs
