[package]
name = "openscad-customizer-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Angeles"]
description = "An interface to the OpenSCAD Customizer."
readme = "ReadMe.md"
repository = "https://github.com/MeechaelA/openscad-customizer-rs"
keywords = ["OpenSCAD", "CAD", "3D"]

exclude = [
    "data/*",
    "Cargo.lock"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}

